<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/downloads_search_hint"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/downloads_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select"
        android:title="@string/downloads_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_storage_info"
        android:title="@string/downloads_open_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_delete_24"
        android:title="@string/downloads_delete_all"
        app:showAsAction="never" />
</menu>
