<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_discover"
        android:icon="@drawable/ic_music_note_24"
        android:title="@string/nav_songs"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_playlists"
        android:icon="@drawable/ic_cymusic_radio_24"
        android:title="@string/nav_radio"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/nav_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_cymusic_text_search_24"
        android:title="@string/nav_search"
        app:showAsAction="always" />
</menu>
